feat: added try/catch